force-app/main/default/objects/Success_Steps__c/Success_Steps__c.object-meta.xml
<CustomObject>
    <label>Success Step</label>
    <nameField>
        <label>Success Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Success Step</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>