force-app/main/default/objects/Success_Steps__c/fields/Expected_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_End_Date__c</fullName>
    <label>Expected End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>