force-app/main/default/objects/Success_Steps__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <label>Goal</label>
    <referenceTo>Goals__c</referenceTo>
    <relationshipLabel>Success Steps</relationshipLabel>
    <relationshipName>Success_Step</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>