force-app/main/default/objects/Success_Steps__c/fields/Is_Delayed__c.field-meta.xml
<CustomField>
    <fullName>Is_Delayed__c</fullName>
    <formula>IF (  NOT(ISBLANK(Actual_End_Date__c)) , 
      IF(  Actual_End_Date__c &gt;  Expected_End_Date__c , 
           true, 
           false
      ), 
      IF( TODAY() &gt; Expected_End_Date__c, 
           true, 
           false
      )
)</formula>
    <label>Is Delayed?</label>
    <type>Checkbox</type>
</CustomField>