force-app/main/default/objects/Success_Steps__c/fields/Number_of_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Tasks__c</fullName>
    <label>Number of Tasks</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>