force-app/main/default/objects/Success_Steps__c/fields/Reason_For_Delay__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Delay__c</fullName>
    <label>Reason For Delay</label>
    <type>TextArea</type>
</CustomField>