force-app/main/default/objects/Success_Steps__c/fields/Result_needed__c.field-meta.xml
<CustomField>
    <fullName>Result_needed__c</fullName>
    <label>Result needed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>