force-app/main/default/objects/Success_Steps__c/fields/Step_Description__c.field-meta.xml
<CustomField>
    <fullName>Step_Description__c</fullName>
    <label>Step Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>