force-app/main/default/objects/Success_Steps__c/fields/Task_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Task_Remaining__c</fullName>
    <label>Task Remaining</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>