force-app/main/default/objects/Success_Steps__c/fields/Total_Time_Delayed__c.field-meta.xml
<CustomField>
    <fullName>Total_Time_Delayed__c</fullName>
    <label>Total Time Delayed</label>
    <length>60</length>
    <type>Text</type>
</CustomField>