force-app/main/default/objects/Success_Steps__c/validationRules/GoalMgm_Cannt_Ch_ExpEndAndStart_If_ActEd.validationRule-meta.xml
<ValidationRule>
    <fullName>GoalMgm_Cannt_Ch_ExpEndAndStart_If_ActEd</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( 
  NOT(ISBLANK(Actual_End_Date__c)),
  OR 
    (
     ISCHANGED(Expected_Start_Date__c),
     ISCHANGED(Expected_End_Date__c) 
    )
)</errorConditionFormula>
    <errorMessage>You can&apos;t change Expected End date and Expected start date when Actual end date has a value.</errorMessage>
</ValidationRule>