force-app/main/default/objects/Success_Steps__c/validationRules/GoalMgm_Exp_Start_Dt_NotGr_Exp_End_Dt.validationRule-meta.xml
<ValidationRule>
    <fullName>GoalMgm_Exp_Start_Dt_NotGr_Exp_End_Dt</fullName>
    <active>true</active>
    <errorConditionFormula>Expected_Start_Date__c &gt; Expected_End_Date__c</errorConditionFormula>
    <errorMessage>Expected start date cannot be greater than Expected End date.</errorMessage>
</ValidationRule>